--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
           <ion-item routerLink="/footer/ofertas">Ofertas</ion-item>
         </ion-menu-toggle>
         <ion-menu-toggle auto-hide="true">
-          <ion-item routerLink="/footer/producto">Historial de Compras</ion-item>
+          <ion-item routerLink="/footer/historial">Historial de Compras</ion-item>
         </ion-menu-toggle>  
         <ion-menu-toggle auto-hide="true">
           <ion-item routerLink="/footer/sugerencia">Reclamos y Sugerencias</ion-item>
