--- a/src/app/domicilio/domicilio.page.html
+++ b/src/app/domicilio/domicilio.page.html
@@ -17,6 +17,9 @@
         <p class="registro">DIRECCIONES GUARDADAS</p>
       </ion-button>
     </div>
+    <div #mapaUbicacion class="mapa">
+
+    </div>
 
     <div class ="btn_regresar"> <img src="../assets/img/atras.png" class="atras" (click)="regresar()"> </div>
 
