--- a/src/app/domicilio/domicilio.page.scss
+++ b/src/app/domicilio/domicilio.page.scss
@@ -23,7 +23,7 @@
     font-style: italic;
 }
 .A_pagar{
-    color:#ff7c55;
+    color:#FE3A00;
     font-size: x-large;
     text-align: left;
 }
@@ -74,4 +74,10 @@ ion-button{
     width: 2rem;
     bottom: 5%;
     position: absolute;
+}
+
+.mapa{
+    height: 40vh;
+    width: 85%;
+    margin:auto;
 }
