--- a/src/app/establecimiento/modal-mapa/modal-mapa.page.html
+++ b/src/app/establecimiento/modal-mapa/modal-mapa.page.html
@@ -1,6 +1,6 @@
 <ion-buttons slot="end">
   <ion-button (click)="dismiss()">
-    <ion-icon slot="icon-only" name="close"></ion-icon>
+    <ion-icon slot="icon-only" name="close" style="color: gray;"></ion-icon>
   </ion-button>
 </ion-buttons>
 <ion-content class="padding">
