--- a/src/app/pagar/pagar.page.scss
+++ b/src/app/pagar/pagar.page.scss
@@ -50,7 +50,7 @@
 }
 .left {
     text-align: right;
-    font-size: 70%;
+    font-size: 3vw;
     color:gray;
     width: 20rem;
     padding-right:  10px;
@@ -58,8 +58,7 @@
 .right {
     text-align: left;
     width: 60%;
-    padding-left:  10px;
-    font-size: 80%;
+    font-size: 4vw;
     color:var(--ion-color-azul-oscuro)
 }
 
