--- a/src/global.scss
+++ b/src/global.scss
@@ -26,9 +26,27 @@
 @import "~@ionic/angular/css/flex-utils.css";
 
 .select-modal .modal-wrapper {
-    height: 50%;
-    top: 25%;
+    height: 60%;
+    top: 20%;
     width: 80%;
+    position: absolute; 
+    display: block;  
+    border-radius: 20px; 
+ }
+
+ .confirm-modal .modal-wrapper {
+   height: 55%;
+   top: 25%;
+   width: 80%;
+   position: absolute; 
+   display: block;  
+   border-radius: 20px; 
+}
+
+ .modal-direccion .modal-wrapper {
+    height: 80%;
+    top: 10%;
+    width: 85%;
     position: absolute; 
     display: block;  
     border-radius: 20px; 
