Proceso para realizar pago

--- a/src/app/direccion/confirmar-direccion/confirmar-direccion.page.scss
+++ b/src/app/direccion/confirmar-direccion/confirmar-direccion.page.scss
@@ -46,6 +46,15 @@ ion-buttons{
     font-size: 3vw;
     color: var(--ion-color-azul-oscuro);
 }
+
+.verMapa{
+    font-size: 12px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    margin: 2rem 0 1rem 0;
+    color: #2153FF;
+}
 ion-button{
     font-size: 2.5vw;
     line-height: 0px;
