--- a/src/app/direccion/nueva-direccion/nueva-direccion.page.scss
+++ b/src/app/direccion/nueva-direccion/nueva-direccion.page.scss
@@ -28,7 +28,7 @@ ion-item{
     margin: 15px 0px 17px 0px;
     --background: #e7e7e7;
     --color: rgb(112, 106, 106);
-    font-size: 2vh;
+    font-size: 1rem;
     border-radius: 10px;
     width: 100%;
     --highlight-height: 0px !important;
