--- a/src/app/direccion/confirmar-direccion/confirmar-direccion.page.html
+++ b/src/app/direccion/confirmar-direccion/confirmar-direccion.page.html
@@ -8,23 +8,24 @@
   <div class="contenedor-page">
     
     <div class="contenedor">
-      <div class="datos">Confirmar direccion</div>
+      <div class="datos">Confirmar dirección</div>
       <div *ngIf="direccion" >
         <div class="campos">
-          <ion-label class="left">Direccion: </ion-label>
+          <ion-label class="left">Dirección: </ion-label>
           <ion-label class="right">{{direccion.direccion}}</ion-label>
         </div>
         <div class="campos">
           <ion-label class="left">Descripción: </ion-label>
           <ion-label class="right">{{direccion.descripcion}}</ion-label>
         </div>
+        <a class="verMapa" (click)="verMapa(direccion.latitud,direccion.longitud)">Ver Mapa</a>
       </div>
       <div class="button-content">
         <ion-button class="btn-cancelar" size="large" (click)="dismiss()">
           <p class="registro">Cancelar</p>
         </ion-button>
         <ion-button class="btn-registro" size="large" (click)="confirmar()">
-          <p class="registro">Confirmarr</p>
+          <p class="registro">Confirmar</p>
         </ion-button>
       </div>
     </div>
