--- a/src/app/direccion/direccion.page.scss
+++ b/src/app/direccion/direccion.page.scss
@@ -5,7 +5,7 @@ ion-buttons{
     align-self: flex-end;
 }
 .contenedor-page{
-    padding: 20px 30px;
+    margin: 25px 30px;
 }
 .contenedor{
     margin: 15px 0px ;
@@ -24,7 +24,7 @@ ion-buttons{
     align-items: center;
     box-shadow: 3px 3px 3px 3px #c2c2c2;
     border-radius: 10px;
-    height: 55px;
+    height: 45px;
     margin: auto;
     justify-content: center;
   }
@@ -34,18 +34,18 @@ ion-buttons{
   
   }
 .contener-direccion{
-    padding:7px 0px;
+    padding:5px 0px;
 }
 
 .contener-columna{
     justify-content: space-between;
     display: flex;
-    width: 70%;
+    width: 85%;
     .nombre-direccion{
         font-weight: bold;
         font-size: 3.6vw;
         color: var(--ion-color-azul-oscuro);
-        margin-bottom: 2px;
+        margin-bottom: 0px;
         margin-top: 0px;
         text-overflow: ellipsis; 
         white-space: nowrap;
