--- a/src/app/domicilio/domicilio.page.html
+++ b/src/app/domicilio/domicilio.page.html
@@ -1,8 +1,10 @@
-<app-header></app-header>
 
 <ion-content>
   <div class="contenedor-page">
-    <ion-label class="titulo">Pagar</ion-label>
+    <div class="titulo_atras">
+      <img class="atras" src="../assets/img/atras_naranja.png" size=12 (click)="atras()">
+        <ion-label class="titulo">Pagar</ion-label>
+    </div>
     <div class="total" >
       <ion-label class="A_pagar_header">Total a Pagar:</ion-label>
       <div style="display: flex;">
@@ -10,6 +12,7 @@
         <div class="A_pagar" id="A_pagar" *ngIf="total">{{total}}</div>
       </div>
     </div>
+    
     
     <div class="button-content">
       <div class="datos">A Domicilio</div>
@@ -21,7 +24,19 @@
 
     </div>
 
-    <div class ="btn_regresar"> <img src="../assets/img/atras.png" class="atras" (click)="regresar()"> </div>
+    <form #form="ngForm" (ngSubmit)="guardar(form)">
+      <ion-item >
+        <ion-input id="1" name="direccion" type="text" placeholder="Dirección" [(ngModel)]="direccion"></ion-input>
+      </ion-item>
+      <ion-item>
+        <ion-textarea name="descripcion" type="text" placeholder="Descripción" ngModel  rows="5" required></ion-textarea>
+      </ion-item>
+    <div class="button-content botones">
 
+      <ion-button class="btn-registro" type=submit>
+        <p class="registro">Continuar</p>
+      </ion-button>
+    </div>
+    </form>
   </div>  
 </ion-content>
