--- a/src/app/efectivo/efectivo.page.html
+++ b/src/app/efectivo/efectivo.page.html
@@ -1,13 +1,14 @@
-<app-header></app-header>
-
 <ion-content>
   <div class="contenedor-page">
-    <ion-label class="titulo">Pagar</ion-label>
+    <div class="titulo_atras">
+      <img class="atras" src="../assets/img/atras_naranja.png" size=12 (click)="atras()">
+        <ion-label class="titulo">Pagar</ion-label>
+    </div>
     <div class="total">
       <ion-label class="A_pagar_header">Total a Pagar:</ion-label>
       <div style="display: flex;">
         <ion-label style="color:#FE3A00;font-size: x-large;padding-left: 10px; margin-top: 0">$</ion-label>
-        <div class="A_pagar" id="A_pagar" *ngIf="total">{{total}}</div>
+        <div class="A_pagar" id="A_pagar" *ngIf="pago">{{pago | number : '1.2-2'}}</div>
       </div>
     </div>
 
@@ -21,6 +22,11 @@
           <ion-label class="right">{{tipoPago}}</ion-label>
           <ion-input name="tipoPago" type="text" [(ngModel)]="tipoPago" hidden required></ion-input>
         </div>
+        <div class="campos" *ngIf="numero">
+          <ion-label class="left">Tarjeta: </ion-label>
+          <ion-label class="right">{{numero}}</ion-label>
+          <ion-input name="tipoPago" type="text" [(ngModel)]="tipoPago" hidden required></ion-input>
+        </div>
         <div class="campos" *ngIf="perfil">
           <ion-label class="left">Nombres: </ion-label>
           <ion-label class="right">{{perfil.nombre}} {{perfil.apellido}}</ion-label>
@@ -30,7 +36,7 @@
           <ion-label class="right">{{perfil.telefono}}</ion-label>
         </div>
         <div class="campos" *ngIf="direccion">
-          <ion-label class="left">Direccion: </ion-label>
+          <ion-label class="left">Dirección: </ion-label>
           <ion-label class="right">{{direccion.direccion}}</ion-label>
         </div>
         <div class="campos" *ngIf="envio">
@@ -53,7 +59,6 @@
     </div>
 
     <div class="button-content">
-      <div class="btn_regresar"> <img src="../assets/img/atras.png" class="atras" (click)="regresar()"> </div>
       <ion-button class="btn-registro" size="large" type="submit">
         <p class="registro">Confirmar</p>
       </ion-button>
