--- a/src/app/pago/pago.page.scss
+++ b/src/app/pago/pago.page.scss
@@ -64,13 +64,12 @@ ion-button{
     padding-bottom: 20px;
   }
 
-  .btn-regresar{
-    text-align: left;
-    width: 7rem;
+
+  .titulo_atras{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
 }
 .atras{
-    height: 2rem;
-    width: 2rem;
-    bottom: 5%;
-    position: absolute;
+    height: 25px;
 }
