--- a/src/app/recoger-pedido/info-local/info-local.page.scss
+++ b/src/app/recoger-pedido/info-local/info-local.page.scss
@@ -41,14 +41,34 @@
     font-weight: lighter;
     font-style:italic;
 }
-
-
+.campos{
+    display: table;
+    margin: 5px auto;
+}
+.campos > ion-label{
+    display: table-cell;
+}
+.left {
+    text-align: left;
+    font-size: 3vw;
+    color:gray;
+    width: 20rem;
+}
+.right {
+    text-align: left;
+    width: 75%;
+    font-size: 4vw;
+    color:var(--ion-color-azul-oscuro)
+}
+.mapa{
+    height: 40vh;
+    margin:auto;
+}
 ion-button{
     --background: var(--ion-color-naranja-oscuro);
     font-size: 0.6rem;
-    --border-radius:5px
+    --border-radius:2px
 }
-
 .button-content{
     display: flex;
     justify-content: space-between;
@@ -56,7 +76,7 @@ ion-button{
     margin: 0;
 }
 .btn-registro{
-    width: 40%;
+    width: 28%;
     line-height: 5px;
 }
 .registro{
@@ -64,7 +84,6 @@ ion-button{
     padding-top: 20px;
     padding-bottom: 20px;
 }
-
 .titulo_atras{
     display: flex;
     justify-content: space-between;
@@ -72,47 +91,4 @@ ion-button{
 }
 .atras{
     height: 25px;
-}
-
-.mapa{
-    height: 40vh;
-    margin:auto;
-}
-
-.botones{
-    display: flex;
-    justify-content: flex-end;
-    bottom: 5%;
-    left: 0%;
-    align-items: center;
-    position: relative;
-    width: 100%;
-}
-
-.btn-registro{
-    --background: var(--ion-color-naranja-oscuro);
-}
-.registro{
-    margin: 0 auto;
-    padding-top: 20px;
-    padding-bottom: 20px;
-}
-
-ion-item{
-    margin: 15px 0px 17px 0px;
-    --background: #e7e7e7;
-    --color: rgb(112, 106, 106);
-    font-size: 1rem;
-    border-radius: 10px;
-    width: 100%;
-    --highlight-height: 0px !important;
-    ion-input{
-        color: var(--ion-color-azul-oscuro);
-        margin-left:10px;
-    }
-    ion-textarea{
-        color: var(--ion-color-azul-oscuro);
-        margin-left:10px;
-        height: 150px;
-    }
 }
