--- a/src/app/shopping-cart/shopping-cart.page.scss
+++ b/src/app/shopping-cart/shopping-cart.page.scss
@@ -2,39 +2,40 @@
     font-family: 'MyriadProSemibold' !important;
 }
 
-.Titulo{
-    padding: 0% 0% 0% 5%;
+.contenedor-page{
+    margin: 10px 20px 20px 20px;
+}
+.titulo_atras{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+.atras{
+    height: 25px;
+}
+.titulo{
+    font-weight: bold;
     color: var(--ion-color-azul-oscuro);
-    //font-family: Arial;
-    //font-weight: bold;
-    font-size: 2rem;
+    font-size: 1.4rem;
+    margin-bottom: 0px;
 }
-
-ion-row{
-    padding-bottom: 60px;
-    height: 25px!important;
+.total{
+    display: flex;
+    justify-content: center;
+    align-items: first baseline;
+    margin-bottom: 2rem;
 }
-
-
 .A_pagar_header{
     color: #2b85cd;
     text-align: right;
-    //font-style: oblique;
-    //vertical-align: middle;
-    //line-height: 90px;
-    font-size: 80%;
-    padding-top: 22px;
+    font-size: 70%;
+    font-style: italic;
 }
-
 .A_pagar{
     color:#FE3A00;
-    font-size: 2rem;
+    font-size: x-large;
     text-align: left;
-    //font-weight: bold;
-    //vertical-align: middle;
-    //line-height: 90px;
 }
-
 .agregar{
     margin: auto;
     display: flex;
@@ -79,19 +80,15 @@ ion-row{
 .borrar_content{
     width: 1rem;
     height: 1rem;
-    left:18rem;
-    top:1rem;
+    left: 92%;
+    top: -32%;
     position: relative;
-    //display: flex;
-    //justify-content: flex-end;
-    text-align: right!important;
-    //margin: 0% 0% 0% 80%;
     z-index: 9;
+
 }
 
 .borrar_content > img{
     height: 1rem;
-    //width: 1rem;
 }
 
 .borrar_content2{
@@ -100,16 +97,12 @@ ion-row{
     left:17rem;
     top:1rem;
     position: relative;
-    //display: flex;
-    //justify-content: flex-end;
     text-align: right!important;
-    //margin: 0% 0% 0% 80%;
     z-index: 9;
 }
 
 .borrar_content2 > img{
     height: 1rem;
-    //width: 1rem;
 }
 
 .nombre_producto{
@@ -121,14 +114,14 @@ ion-row{
 }
 
 .cantidad{
-    width: 30px !important;
-    height: 30px !important;
+    width: 20px !important;
+    height: 20px !important;
     border-radius: 5px;
     border: solid 1px gray;
     vertical-align: middle !important;
     font-size: 12px;
     text-align: center !important;
-    padding-top: 0.4rem;
+    padding-top: 1px;
 }
 
 .cantidad_content{
@@ -138,13 +131,9 @@ ion-row{
 }
 
 .pagar{
-    position: relative;
-    bottom: 0;
-    right: 0;
-    margin: 0% 5% 0% 0%;
-    height: 6rem;
-    width: 6rem;
-    padding: 20px 20px 20px 20px;
+    margin: 10% 0%;
+    height: 3rem;
+    width: 3rem;
 }
 
 .restar{
@@ -194,16 +183,6 @@ ion-header{
 }
 
 
-
-.titulo{
-    font-family: var(--ion-font-family);
-    font-weight: bold;
-    font-size: larger;
-    color: var(--ion-color-azul-oscuro);
-    font-size: 1.7rem;
-}
-
-
 .icono{
     position: relative;
     right: 10px;
@@ -222,48 +201,26 @@ ion-input{
 
 .div-producto{
     display: flex;
-    flex-flow: row nowrap; /* Align on the same line */
-    justify-content: space-around; 
-    vertical-align: middle;
-    box-shadow: 5px 5px 5px 5px #c2c2c2;
-    padding: 0px 0px 0px 0px;
-    border-radius: 20px;
-    height: 130px;
-
-
+    justify-content: space-around;
+    box-shadow: 3px 2px 4px 1px #c2c2c2;
+    border-radius: 10px;
+    height: 95px;
+    align-items: center;
 }
 .producto-carrito{
-    // display: flex;
-    // vertical-align: bottom;
-    // justify-content: end;
-    // width: 100%;
-    top:1.5rem;
-    position: relative;
-    display: -webkit-inline-box;
-    text-align: center;
-    vertical-align: middle;
-    //left: 12rem;
-    //right: 30px;
-    //bottom:150px;
-    //padding-bottom: 100px ;
-    
+    display: flex;
+    width: 30%;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0px 10px;
 }
 
 .producto-cupon{
-    // display: flex;
-    // vertical-align: bottom;
-    // justify-content: end;
-    // width: 100%;
     top:1.5rem;
     position: relative;
     display: -webkit-inline-box;
     text-align: center;
-    vertical-align: middle;
-    //left: 12rem;
-    //right: 2rem;
-    //bottom:150px;
-    //padding-bottom: 100px ;
-    
+    vertical-align: middle;    
 }
 
 .btn-producto{
@@ -272,64 +229,51 @@ ion-input{
 }
 
 #mas{
-    margin-right:  12px;
-    z-index: 9;
+    z-index: 8;
 }
 #menos{
-        margin-left:  12px;
-        z-index: 9;
+    z-index: 8;
 
 }
 
 .contener-producto{
-    padding:10px 20px 10px 20px;
-        // height:  100px;
-
+    margin:12px 0px;
 }
 
 .contener-columna{
-    display: block;
+    align-items: center;
+    display: flex;
+    height: 80%;
+    width: 75%;
+    padding: 0% 5% 0% 2%;
+    justify-content: flex-start;
 }
 
 .nombre-producto{
-     font-family: var(--ion-font-family);
     font-weight: bold;
     color: var(--ion-color-azul-oscuro);
     font-size: 14px;
-    position: relative;
-    top:27px;
-    right: 0rem;
-    //padding-left: 100rem;
-    left: 0rem;
     
     
 }
 
 .producto{
-    position: relative;
-    //bottom: 20px;
-    //height: 5rem;
-    //width: 8rem;
-    padding-top:1.5rem;
-    left: 0rem;
-    //padding-left: 0.5rem;
+    width: 25%;
+    height: 80%;
+    justify-content: center;
+    display: flex;
+    align-items: center;
 }
 
 .producto >img {
-    height:80px!important ;
-    width: 90px!important;
-    //padding-bottom: 5px;
-    //box-shadow: 3px 3px 3px 3px #c2c2c2;
+    height:90%;
 }
+
 
 .producto1{
     position: relative;
-    //bottom: 20px;
-    //height: 5rem;
-    //width: 8rem;
     padding-top:1.5rem;
     left: 0rem;
-    //padding-left: 0.5rem;
 }
 
 .producto1 >img {
@@ -349,33 +293,26 @@ ion-input{
 }
 
 .nombre{
-    //text-align: justify;
-    width: 80px;
-    height: 80px;
-    //padding-left: 20px;
-    font-size: 1rem;
-    padding-top: 0px;
-    left:0rem;
+    width: 45%;
+    height: 100%;
+    display: flex;
+    align-items: center;
 }
 
 .nombre h6{
     padding-top: 0rem;
-    text-align: justify;
-    text-justify: inter-word;
+    margin: 0px;
 }
 
 
 .precio{
     color: var(--ion-color-naranja-oscuro);
     font-weight: bolder;
-    //font-size: small;
-    position: relative;
-    //right:  3px;
-    padding-left: 0rem;
-    padding-right: 25px;
     text-align: center;
-    display: inline-flex;
-    
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    width: 25%;
 }
 
 .precio2{
@@ -393,14 +330,9 @@ ion-input{
     
 }
 
-div.precio h4{
-    position: relative;
-    //padding-left: 1rem;
+div.precio p{
+    margin: 0px;
     text-align: center;
-    font-size: 1rem;
-        //padding-right: 20px;
-    //padding-right: 30px;
-
 }
 
 div.carrito img{
@@ -452,8 +384,9 @@ div.carrito img{
 }
 
 .btns{
-    text-align: center;
+    justify-content: flex-end;
     display: flex;
+    margin-top: 2rem;
     .btn-regresar{
         //padding: 25px 20px 20px 25px;
         text-align: left;
@@ -470,18 +403,6 @@ div.carrito img{
     }
 }
 
-.atras{
-    position: absolute;
-    //bottom: 0;
-    //right: 0;
-    //margin: 0% 5% 0% 0%;
-    height: 4.5rem;
-    width: 4.5rem;
-    top:0;
-    left:15.5rem;
-    padding: 20px 20px 20px 20px;
-}
-
 .atras1{
     position: absolute;
     //bottom: 0;
@@ -494,8 +415,23 @@ div.carrito img{
     padding: 20px 20px 20px 20px;
 }
 
-.btn_regresar{
-    text-align: center;
+button{
+    height: 1.5rem;
+    background: var(--ion-color-naranja-oscuro);
     display: flex;
-    text-align: right;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    color:white;
+}
+
+.available.div-producto {
+    position: absolute;
+    box-shadow: none;
+    z-index: 9;
+    width: calc(100% - 40px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(255,255,255,0.8);
 }
