Cambio disenio login, verificacion cedula, perfil

--- a/src/app/auth/registro-fb/registro-fb.page.html
+++ b/src/app/auth/registro-fb/registro-fb.page.html
@@ -1,5 +1,3 @@
-<app-header></app-header>
-
 
 <ion-content>
   <div class="contenedor-page">
@@ -8,7 +6,7 @@
     
     <div class = "contendor-Ruc">
       <div>Completar Registro</div> 
-      <ion-input type="number" placeholder="Ruc/Cedula" [(ngModel)]="RegistroInput"></ion-input>
+      <ion-input type="number" placeholder="Ruc/Cédula" [(ngModel)]="RegistroInput"></ion-input>
     </div>
   </div>
 </ion-content>
