--- a/src/app/auth/login/login/login.page.scss
+++ b/src/app/auth/login/login/login.page.scss
@@ -4,34 +4,48 @@
 
 .header{
     padding: 0px 0px 0px 0px !important;
-    height: 18.3rem;
 }
+.atras{
+    position: absolute;
+    top: 2%;
+    left: 3%;
+    height: 30px;
+}
+
 ion-footer{
     margin: 0 auto;
+    position: relative;
+    left: 0;
+    bottom: 0px;
+    right: 0;
 }
 
 ion-toolbar{
     --background: var(--ion-color-naranja-oscuro);
-    //--background: linear-gradient(to left top,var(--ion-color-naranja-oscuro),var(--ion-color-naranja-claro));
-    //height: 120%;
 }
 
+.fb_login{
+    position: relative;
+    bottom: 20%;
+    width: 50% !important;
+}
 
 ion-title{
     /*width: auto;*/
     --color: #fff;
     width: 100%; 
-    position: absolute; 
+    position: relative; 
     left: 0; 
     height: 0%;
 }
 ion-item{
-    padding: 0px 0px 0px 0px;
+    margin: 5% 0px;
+    padding: 0px;
     --background: #e7e7e7;
     --color: rgb(112, 106, 106);
     border-radius: 10px;
     font-size: 0.8rem;
-    height:30% !important;
+    height: 40% !important;
     --highlight-height: 0.5px !important;
 }
 ion-button.inicio{
@@ -58,14 +72,9 @@ ion-button.button-fb{
     padding: 68px;
     width: 300%;
 }
-.logo > img{
+.logo > .img_logo{
     margin: 0 auto;
-    //margin: auto;
-    //width: 300%;
-    //height: 180%;
-    //margin: auto;
     width: 100%;
-    height: 18.4rem;
 }
 
 .form{
@@ -73,9 +82,10 @@ ion-button.button-fb{
     justify-content: center;
     align-content: center;
     align-items: center;
-    padding: 30px 0px 19px 0px;
-    //padding: 40px 0px 40px 0px;
-
+    padding: 20px 0px ;
+    top:35%;
+    position: relative;
+    width: 100%;
 }
 
 
@@ -111,24 +121,17 @@ div.ion-text-center{
 }
 
  .button{
-    //text-align: center;
-    padding: 12px 45px 0px 40px;
     margin: 0 auto;
-    //--background:white !important; 
     width:80%;
 }
 
-//ion-content{
-    //padding: 0px 0px 0px 0px !important;
-//}
-
-.espacio{
-    padding-top: 10px;
-    padding-bottom: 10px;
-}
 
 .espacio2{
-    padding-top: 2rem;
+    margin-top: 5vh;
+    position: relative;
+    bottom: 10%;
+    left: 10%;
+    width: 80%;
 
 }
 
@@ -139,8 +142,9 @@ div.ion-text-center{
 }
 
 .contenedor-footer{
-    height: 3.5rem;
-    margin: 0 auto;
+    height: 7vh;
+    margin: 2vh auto 0px auto;
+    width: 78%;
 }
 
 ion-button.inicio{
