--- a/src/app/auth/registro/registro/registro.page.html
+++ b/src/app/auth/registro/registro/registro.page.html
@@ -1,6 +1,6 @@
 <!--<ion-header>-->
   <div class = 'header'>
-  <div class ="btn_regresar"> <img src="../assets/img/regresar_final1.png"  (click)="showLoadingR()"> </div>
+  <div class ="btn_regresar"> <img src="../assets/img/regresar_final1.png"  (click)="regresar()"> </div>
   <div class= "headerS" > <img src="../assets/img/header_registro_final1.png" size= 12></div>
 </div>
 <!--</ion-header>[disabled]="form.invalid"-->
@@ -23,8 +23,7 @@
          </div>
           </div> 
            <ion-item >
-             <ion-input id= "1" name="cedula" type="text" placeholder="RUC/Cedula*" ngModel required></ion-input>
-            <!-- <input name="cedula" type="text" placeholder="RUC/Cedula*" ngModel required />-->
+             <ion-input id= "1" name="cedula" type="text" placeholder="RUC/Cédula*" ngModel required></ion-input>
            </ion-item>
            <ion-item >
              <ion-input id= "2" name="nombre" type="text" placeholder="Nombre*" ngModel required></ion-input>
@@ -49,7 +48,7 @@
            </ion-item>
          <ion-radio-group  >
            <div class = "Condicion">
-             <ion-label class="terminos" >Acepto Términos y Condiciones</ion-label>
+             <ion-label class="terminos" (click)="politicas()" >Acepto Términos y Condiciones</ion-label>
              <ion-radio class = "radio" slot="start" value="acepto" ></ion-radio>
            </div>
          </ion-radio-group>
