--- a/src/app/perfil/editar-perfil/editar-perfil.page.scss
+++ b/src/app/perfil/editar-perfil/editar-perfil.page.scss
@@ -5,11 +5,20 @@
     padding: 20px 30px;
 }
 
+.titulo_atras{
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 5px;
+}
+.atras{
+  height: 25px;
+}
+
   .contenedor-titulo{
     
     font-weight: bold;
     display:flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: baseline;
     .titulo{
         color: var(--ion-color-azul-oscuro);
@@ -49,7 +58,7 @@ ion-item{
   }
   
   .form{
-    padding:20px 0px;
+    padding:5px 0px;
   }
   
   .contenedor{
@@ -70,43 +79,35 @@ ion-item{
     .perfil{
       text-align: center;
     }
-
-    .perfil img{
-      height: 7rem;
-      border-radius: 100%;
-    }
   
     .select-profile-picture{
       text-align: left;
       font-size: 12px;
       margin: 0 auto;
     }
-    
-    .btn_regresar >img{
-      height: 100%;
-      width: 100%;
-      float:left;
-    }
-    .header > img {
-      height: 100%;
-      width: 100%;
-      margin: 0 auto;
-    }
   
     .hoverable > img {
-      height: 100%;
-      width: 100%;
+      height: inherit;
+      width: inherit;
       padding: 0%;
       border-radius: 50%;
     }
     .hoverable{
       display: inline-block;
       cursor: pointer;
-      height: 140px;
-      width: 120px;
+      height: 8rem;
+      width: 8rem;
       border-radius: 50%;
       margin: 0 auto;
       padding-bottom: 25px;
+    }
+    #editar{
+      z-index: 10;
+      border-radius: 0px;
+      position: absolute;
+      height: 8.3rem;
+      margin: -2px;
+      width: 8.3rem;
     }
     
     #fileInput{
@@ -129,8 +130,8 @@ ion-item{
     margin-top: 1px;
     margin-right: 95px;
     position:absolute;
-    top:0;
-    right:0;
+    top: 3rem;
+    right: 0;
     border:none!important;
     border-radius: 20px;
     background-color: transparent;
