--- a/src/app/aviso/incorrecto/incorrecto.page.scss
+++ b/src/app/aviso/incorrecto/incorrecto.page.scss
@@ -6,12 +6,14 @@
 
 .btn-salir{
     text-align: right !important;
-    padding: 20px 20px 10px 10px;
+    margin: 20px 20px 10px 10px;
 }
 
-.img-error img{
-    height: 9em;
-    width: 9.5rem;
+.img-error {
+    margin: 2rem 0px 20px 0px;
+    img{
+        height: 5rem;
+    }
 }
 
 .titulo{
@@ -21,7 +23,7 @@
 }
 
 .mensaje{
-    padding: 25px 20px 20px 20px;
+    margin: 25px 20px 20px 20px;
     color:#87868A !important;
     font-size: 0.9rem;
 }
