--- a/src/app/aviso/pregunta/pregunta.page.html
+++ b/src/app/aviso/pregunta/pregunta.page.html
@@ -1,9 +1,8 @@
 <ion-content padding text-center style="text-align: center !important;">
   <div class = "btn-salir"><img src="../assets/img/salir.png" (click)=salir()></div>
-  <div class = "titulo">¿Desea eliminar el producto/oferta del carrito de compras</div>
+  <div class = "titulo">¿Desea eliminar el producto/oferta del carrito de compras?</div>
   <div class = "btns">
-    <div class="btn-si" (click)=aceptar() ><ion-button >SI</ion-button></div>
-    <div class="espacio" ></div>
-    <div class="btn-no" (click)=salir()><ion-button>NO</ion-button></div>
+    <div class="btn" (click)=aceptar() ><span >Si</span></div>
+    <div class="btn" (click)=salir()><span>No</span></div>
   </div>
 </ion-content>
