Contacto, politicas, sugerencias

--- a/src/app/politicas/politicas.page.html
+++ b/src/app/politicas/politicas.page.html
@@ -1,11 +1,11 @@
-<app-header></app-header>
 <ion-content>
   <div class= "contenedor-page">
-    <ion-label class="titulo">Políticas de Privacidad</ion-label>
+    <div class="contenedor-titulo">
+      <ion-label class="titulo">Políticas de Privacidad</ion-label>
+    </div>
     <div class = contenedor-politicas >
       <p class = "contenido">{{detalle}}</p>
       <!--aqui va la descripcions-->
     </div>
   </div>
 </ion-content>
-<app-footer></app-footer>
