--- a/src/app/contacto/contacto.page.html
+++ b/src/app/contacto/contacto.page.html
@@ -1,8 +1,9 @@
-<app-header></app-header>
 
 <ion-content>
     <div class="contenedor-page">
-        <ion-label class="titulo">Contáctanos</ion-label>
+        <div class="contenedor-titulo">
+            <ion-label class="titulo">Contáctanos</ion-label>
+          </div>
         <div class="social-media">
             <div class="red" *ngFor="let contacto of contactos">
                 <a [href]="contacto.link">
@@ -15,20 +16,16 @@
                 <div class="left">
                     <img src='../assets/img/telefonos.png'>
                 </div>
-                <ion-label class="right">045931212 - 0423343434</ion-label>
-            </div>
-            <div class="info">
-                <div class="left">
-                    <img src='../assets/img/red.png'>
-                </div>
-                <ion-label class="right">www.cabuto.com.ec</ion-label>
-            </div>
-            <div class="info">
-                <div class="left">
-                    <img src='../assets/img/correo.png'>
-                </div>
-                <ion-label class="right">info@cabuto.com.ec</ion-label>
-            </div>       
+                <a class="right" href="tel:0988277349">
+                    <ion-label>0988277349</ion-label>
+                </a>
+            </div>     
         </div>
+    </div>
+    <div class="desarrollado">
+        Desarrollado por
+        <a href="https://www.instagram.com/ingenieriadesoftware/">
+            <img src='../assets/img/ids.jpg'>
+        </a>
     </div>
 </ion-content>
