--- a/src/app/sugerencia/sugerencia.page.scss
+++ b/src/app/sugerencia/sugerencia.page.scss
@@ -4,19 +4,25 @@
 .contenedor-page{
     padding: 20px 30px;
 }
-.titulo{
-    font-weight: bold;
-    font-size: larger;
-    color: var(--ion-color-azul-oscuro);
-    font-size: 1.5rem;
-    margin-bottom: 0px;
+.contenedor-titulo{
+    
+  font-weight: bold;
+  display:flex;
+  justify-content: center;
+  align-items: baseline;
+  .titulo{
+      color: var(--ion-color-azul-oscuro);
+      font-size: larger;
+      font-size: 1.5rem;
+      margin-bottom: 0px;
+  }
 }
+
 
 ion-item{
     --background: #e7e7e7;
     --color: rgb(112, 106, 106);
     font-size: 1rem;
-    width: 90%;
     --highlight-height: 0px !important;
     margin: 5% auto;
     border-radius: 10px;
@@ -34,6 +40,7 @@ ion-item{
 
 .form{
     padding:20px 0px;
+    padding-bottom: 0px;
   }
   .perfil{
     background: #e7e7e7;
@@ -50,22 +57,22 @@ ion-item{
     font-size: 12px;
     margin: 0 auto;
   }
-  .hoverable > img {
+  .div-sugerencia > img {
     height: 25%;
     padding: 0%;
-    margin: 30% 0;
-  }
-  .hoverable{
-    display: inline-block;
-    cursor: pointer;
-    background: #e7e7e7;
-    height: 200px;
-    width: 250px;
     margin: auto;
-    padding: 5px 0;
   }
-  
-  #fileInput{
+  .div-sugerencia{
+    background: #e7e7e7;
+    border-radius: 15px;
+    height: 30vh;
+    width: 100%;
+    margin: auto;
+    display: inline-flex;
+    justify-content:center;
+    padding: 10px;
+  }
+  #sugerenciaInput{
     display: none;
     height: 20%;
     padding-top: 0px; 
@@ -78,20 +85,32 @@ ion-item{
     text-align: start;
 }
 
-#button {
+  #button {
     line-height: 12px;
     width: 30px;
     height: 30px;
     font-size: 20pt;
-    margin-top: 1px;
-    margin-right: 95px;
-    position:absolute;
-    top:0;
-    right:0;
-    border:none!important;
+    margin-top: 6vh;
+    margin-right: 2vw;
+    position: absolute;
+    top: 0;
+    right: 0;
+    border: none !important;
     border-radius: 20px;
     background-color: transparent;
-    text-align:start!important;
+    text-align: start !important;
+  }
+
+  .placeholder{
+    text-align: justify;
+    background: transparent;
+    border: 0;
+    width: 100%;
+    padding-left: 10px;
+    color: var(--ion-color-azul-oscuro);
+    opacity: .5;
+    position: absolute;
+    margin: 15px;
   }
   
   .button-content{
@@ -104,6 +123,4 @@ ion-item{
   }
   .registro{
     margin: 0 auto;
-    padding-top: 20px;
-    padding-bottom: 20px;
   }
