--- a/src/app/detalles-productos/detalles-productos.page.scss
+++ b/src/app/detalles-productos/detalles-productos.page.scss
@@ -10,24 +10,22 @@
 }
 
 .imagen img{
-    height: 9em;
-    width: 9.5rem;
+    height: 6rem;
 }
 
 .nombre{
-    padding-top: 0px;
+    padding-top: 10px;
     color:#0F195E !important;
 }
 
 .descripcion{
-    padding: 25px 20px 20px 20px;
+    padding: 10px 20px;
     color:#87868A !important;
 }
 
 .precio{
     text-align: right !important;
     color:#FE3A00 !important;
-    padding-top: 25px;
     padding-right: 30px;
     font-size: 1.5rem;
 }
