--- a/src/app/ofertas/ofertas.page.html
+++ b/src/app/ofertas/ofertas.page.html
@@ -1,6 +1,8 @@
-<app-header></app-header>
 
 <ion-content>
+    <ion-refresher slot="fixed" (ionRefresh)="datos($event)">
+        <ion-refresher-content></ion-refresher-content>
+    </ion-refresher>
     <div class="contenedor-page">
         <ion-label class="titulo">Ofertas</ion-label>
         <!-- Default Searchbar -->
@@ -8,6 +10,7 @@
             <div>
                 <!--<div class="contener-oferta">-->
                     <div class="contener-producto"  *ngFor="let productos of oferta">
+                        <div class="available div-producto" *ngIf="productos.cantidad<= 0">Agotado</div>
                         <div class="div-producto">
                             <div class="contener-columnaI">
                                 <div class="producto">
@@ -19,7 +22,7 @@
                                     <h6 class="nombre-producto" name="nombre">{{productos.nombre}}</h6>
                                 </div>
                                 <div class="producto-carrito">
-                                    <img src="../assets/img/agregar.png" width="10" height="10" class="btn-producto" id="mas" (click)= agregar(productos.id_unico)>
+                                    <img src="../assets/img/agregar.png" width="10" height="10" class="btn-producto" id="mas" (click)= agregar(productos.id_unico,productos.cantidad)>
                                     <!--<input type="text" tag = "barra" name="cantidad" id="{{productos.nombre}}" disabled="true" class="estilo-cantidad" placeholder="0" value ='0' >-->
     
                                     <div  id="{{productos.id_unico}}" class="cantidad estilo-cantidad" >0</div>
@@ -33,7 +36,7 @@
                                     <h4 class = "descuento">${{productos.precio}}</h4>
                                 </div>
                                 <div class="carrito">
-                                    <img src="../assets/img/carrito_activo.png" width="25" height="25" (click)=carrito(productos.id_unico)>
+                                    <img src="../assets/img/carrito_activo.png" height="23" (click)=carrito(productos.id_unico)>
                                 </div>
                             </div>
                         </div>
