--- a/src/app/producto/producto.page.scss
+++ b/src/app/producto/producto.page.scss
@@ -1,14 +1,3 @@
-/*.logo{
-    display: flex;
-    justify-content: center;
-   
-    
-    display: inline-block;
-    font-size: 20px;
-    padding: 20px;
-}
-*/
-
 ion-header{
     height: 10px;
     width: 100%;
@@ -66,8 +55,6 @@ ion-input{
     padding: 20px 0px 40px 0px;
     display: flex;
     justify-content: flex-end;
-    //height: 10px;
-    //width: 30px;
     font-size: 1rem;
 }
 
@@ -107,24 +94,15 @@ ion-input{
   justify-content: space-around; 
 vertical-align: middle;
 box-shadow: 5px 5px 5px 5px #c2c2c2;
-//padding: 20px 0px;
     border-radius: 20px;
     height: 130px;
 
 
 }
 .producto-carrito{
-    // display: flex;
-    // vertical-align: bottom;
-    // justify-content: end;
-    // width: 100%;
     position: absolute;
     left: 12rem;
     display: -webkit-inline-box;
-    //right: 30px;
-    //bottom:150px;
-    //padding-bottom: 100px ;
-    
 }
 
 .btn-producto{
@@ -136,7 +114,7 @@ vertical-align: middle;
     margin-right:  12px;
 }
 #menos{
-        margin-left:  12px;
+    margin-left:  12px;
 
 }
 
@@ -152,8 +130,6 @@ vertical-align: middle;
 }
 .contener-producto{
     padding:20px 0px;
-        // height:  100px;
-
 }
 
 .contener-columna{
@@ -181,7 +157,6 @@ vertical-align: middle;
     height:120px!important ;
     width: 150px!important;
     padding-bottom: 5px;
-    //box-shadow: 3px 3px 3px 3px #c2c2c2;
 }
 
 .detalle{
@@ -194,7 +169,6 @@ vertical-align: middle;
 }
 
 .nombre{
-    //text-align: justify;
     width: 150px;
     height: 80px;
     padding-left: 25px;
@@ -210,9 +184,7 @@ vertical-align: middle;
 .precio{
     color: var(--ion-color-naranja-oscuro);
     font-weight: bolder;
-    //font-size: small;
     position: relative;
-    //right:  3px;
     padding-left: 0px;
     padding-right: 30px;
     text-align: right;
@@ -224,20 +196,23 @@ div.precio h4{
     padding-left: 0px;
     text-align: right;
     font-size: 1rem;
-        //padding-right: 20px;
-    //padding-right: 30px;
-
 }
 
 div.carrito img{
-    //position: relative;
     position: absolute;
     top: 95px;
-    width:1.6rem !important;
-    height:1.3rem!important ;
-    //left: 3px;
-    //text-align: right;
     right: 2rem;
+}
+
+.available.div-producto {
+    position: absolute;
+    box-shadow: none;
+    z-index: 1;
+    width: calc(100% - 60px);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(255,255,255,0.7);
 }
 
 .centrar{
@@ -256,7 +231,6 @@ div.carrito img{
 .contener-columnaI{
     float: right;
     position: relative;
-    //paddin-left: 20px;
     padding-left: 0px;
     text-align: right;
     justify-content: flex-end;
@@ -265,424 +239,3 @@ div.carrito img{
     padding-left: 0px;
     padding-right: 30px;
 }
-
-/*
-*{
-    font-family: 'MyriadProSemibold' !important;
-}
-
-.titulo{
-    font-family: var(--ion-font-family);
-    font-weight: bold;
-    font-size: larger;
-    color: var(--ion-color-azul-oscuro);
-    font-size: 2rem;
-}
-
-
-.icono{
-    position: relative;
-    right: 15px;
-    width: 20px;
-    height: 20px;
-}
-
-ion-toolbar{
-    --background: linear-gradient(to left,var(--ion-color-naranja-oscuro),var(--ion-color-naranja-claro));
-}
-
-
-.contenedor-searchbar{
-    display: flex;
-align-items: center;
-    background: var(--ion-color-gris-claro);
-    color: var(--ion-color-gris-oscuro);
-    border-radius: 5px;  
-    height: 40px; 
-
-
-}
-
-.contenedor{
-    padding: 30px 0px;
-}
-
-ion-input{
-    font-weight: bold;
-}
-
-.contenedor-page{
-    padding: 20px 30px;
-}
-
-.contenedor-filtro{
-    padding: 20px 0px;
-    display: flex;
-    justify-content: flex-end;
-}
-
-.selector{
-    font-family: var(--ion-font-family);
-    font-weight: bold;
-    font-size: medium;
-    color: var(--ion-color-azul-oscuro);
-    background: var(--ion-color-gris-claro);
-padding: 10px 20px;
-    border-radius: 5px;  
-    vertical-align: middle;
-
-}
-
-.subtitulo{
-    color: var(--ion-color-gris-oscuro);
-    font-weight: lighter;
-    padding: 0px 10px 0px 0px;
-}
-
-.div-producto{
-    display: flex;
-     flex-flow: row nowrap; 
-  justify-content: space-around; 
-vertical-align: middle;
-    box-shadow: 5px 5px 5px 5px #c2c2c2;
-//padding: 20px 0px;
-    border-radius: 20px;
-    //border:#c2c2c2 1px solid;
-    height: 130px;
-
-
-}
-.producto-carrito{
-    // display: flex;
-    // vertical-align: bottom;
-    // justify-content: end;
-    // width: 100%;
-    position: relative;
-    left: 80px;
-    bottom:15px;
-}
-
-.btn-producto{
-vertical-align: middle;
-
-}
-
-#mas{
-    margin-right:  12px;
-}
-#menos{
-        margin-left:  12px;
-
-}
-
-.estilo-cantidad{
-    width: 22px;
-    height: 22px;
-    border-radius: 5px;
-    border: solid 1px gray;
-    vertical-align: middle;
-    font-size: 12px;
-    text-align: center;
-
-}
-.contener-producto{
-    padding:20px 0px;
-    
-        // height:  100px;
-
-}
-
-.contener-columna{
-    display: block;
-    
-}
-
-.contener-columnaI{
-    display: block;
-    padding-left: 2px;
-}
-
-.nombre-producto{
-     font-family: var(--ion-font-family);
-    font-weight: bold;
-    color: var(--ion-color-azul-oscuro);
-    font-size: 14px;
-    position: relative;
-    top:20px;
-    right: 10px;
-}
-
-.producto > img{
-    height: 100%!important;
-    width:100% !important;
-    //padding-left: 10px;
-}
-
-.producto{
-    position: relative;
-    //bottom: 20px;
-    box-shadow: 5px 5px 5px 5px #c2c2c2;
-    width:70%;
-    height:70%;
-    
-}
-
-.detalle{
-    position: relative;
-    bottom: 10px;
-    text-align: center;
-    font-style: italic;
-    font-size: smaller;
-    color: #2153FF;
-    padding-right: 30px;
-}
-
-.nombre{
-    //text-align: justify;
-    width: 160px;
-    height: 90px;
-}
-
-
-.precio{
-    color: var(--ion-color-naranja-oscuro);
-    font-weight: bolder;
-    //font-size: small;
-    position: relative;
-    //right:  5px;
-    //padding-left: 20px;
-    padding-right: 18px;
-}
-
-div.precio h4{
-        text-align: left;
-        font-size: 1rem;
-
-}
-
-div.carrito img{
-    position: relative;
-    top: 38px;
-    left: 14px;
-    right:  6px;
-}
-
-.centrar{
-    width: 70px;
-}
-
-.conenter-columna-centrar{
-    display: flex;
-    justify-content: center;
-    align-content: center;
-    align-items: center;
-}
-
-
-/**
-*{
-    font-family: 'MyriadProSemibold' !important;
-}
-
-.titulo{
-    font-family: var(--ion-font-family);
-    font-weight: bold;
-    font-size: larger;
-    color: var(--ion-color-azul-oscuro);
-    font-size: 2rem;
-}
-
-
-.icono{
-    position: relative;
-    right: 15px;
-    width: 20px;
-    height: 20px;
-}
-
-ion-toolbar{
-    --background: linear-gradient(to left,var(--ion-color-naranja-oscuro),var(--ion-color-naranja-claro));
-}
-
-
-.contenedor-searchbar{
-    display: flex;
-align-items: center;
-    background: var(--ion-color-gris-claro);
-    color: var(--ion-color-gris-oscuro);
-    border-radius: 5px;  
-    height: 40px; 
-
-
-}
-
-.contenedor{
-    padding: 30px 0px;
-}
-
-ion-input{
-    font-weight: bold;
-}
-
-.contenedor-page{
-    padding: 20px 30px;
-}
-
-.contenedor-filtro{
-    padding: 20px 0px;
-    display: flex;
-    justify-content: flex-end;
-}
-
-.selector{
-    font-family: var(--ion-font-family);
-    font-weight: bold;
-    font-size: medium;
-    color: var(--ion-color-azul-oscuro);
-    background: var(--ion-color-gris-claro);
-padding: 10px 20px;
-    border-radius: 5px;  
-    vertical-align: middle;
-
-}
-
-.subtitulo{
-    color: var(--ion-color-gris-oscuro);
-    font-weight: lighter;
-    padding: 0px 10px 0px 0px;
-}
-
-.div-producto{
-    display: flex;
-     flex-flow: row nowrap; 
-     justify-content: space-around; 
-     vertical-align: middle;
-         box-shadow: 5px 5px 5px 5px #c2c2c2;
-     //padding: 20px 0px;
-         border-radius: 20px;
-         //border:#c2c2c2 1px solid;
-         height: 130px;
-     
-     
-     }
-     .producto-carrito{
-         // display: flex;
-         // vertical-align: bottom;
-         // justify-content: end;
-         // width: 100%;
-         position: relative;
-         left: 70px;
-         bottom:15px;
-     }
-     
-     .btn-producto{
-     vertical-align: middle;
-     
-     }
-     
-     #mas{
-         margin-right:  12px;
-     }
-     #menos{
-             margin-left:  12px;
-     
-     }
-     
-     .estilo-cantidad{
-         width: 22px;
-         height: 22px;
-         border-radius: 5px;
-         border: solid 1px gray;
-         vertical-align: middle;
-         font-size: 12px;
-         text-align: center;
-     
-     }
-     .contener-producto{
-         padding:20px 0px;
-         
-             // height:  100px;
-     
-     }
-     
-     .contener-columna{
-         display: block;
-         
-     }
-     
-     .contener-columnaI{
-         display: block;
-         padding-left: 25px;
-         z-index: inherit 0;
-     }
-     
-     .nombre-producto{
-          font-family: var(--ion-font-family);
-         font-weight: bold;
-         color: var(--ion-color-azul-oscuro);
-         font-size: 14px;
-         position: relative;
-         top:20px;
-         right: 10px;
-         z-index: inherit 1;
-     }
-     
-     .producto > img{
-         height: 150%!important;
-         width:120% !important;
-         //padding-left: 10px;
-         padding-bottom: 20px;
-     }
-     
-     .producto{
-         position: relative;
-         //bottom: 20px;
-         box-shadow: 5px 5px 5px 5px #c2c2c2;
-         width:75%;
-         height:70%;
-         padding-bottom: 19px;
-     }
-     
-     .detalle{
-         position: relative;
-         bottom: 10px;
-         text-align: center;
-         font-style: italic;
-         font-size: smaller;
-         color: #2153FF;
-         padding-right: 35px;
-     }
-     
-     .nombre{
-         //text-align: justify;
-         width: 160px;
-         height: 90px;
-     }
-     
-     
-     .precio{
-         color: var(--ion-color-naranja-oscuro);
-         font-weight: bolder;
-         //font-size: small;
-         position: relative;
-         right:  5px;
-         //left: 20px;
-     }
-     
-     div.precio h4{
-             text-align: left;
-             font-size: 1rem;
-     
-     }
-     
-     div.carrito img{
-         position: relative;
-         top: 38px;
-         //left: 10px;
-         left: 10px;
-     }
-     
-     .centrar{
-         width: 70px;
-     }
-**/
