--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,49 +1,3 @@
-/*.header-content{
-    height: 180px;
-    width: 350px;
-    background: #7590d6;
-    background: linear-gradient(90deg, #7590d6 0%, #4d71d7 100%);
-    box-shadow: 0px 1px 10px rgba(98, 140, 255, 0.5);
-    transform: rotate(-15deg);
-    border-radius: 10px 10px 10px 50px;
-    margin-left: -18px;
-    margin-top: -50px;
-    margin-bottom: 60px;
-}*/
-
-/*.header-content{
-    height: 180px;
-    width: 350px;
-    text-align: center;
-    --background-color: #000052 !important;
-    display: flex;
-
-    
-
-    img{
-        width: 80px;
-        height: 80px;
-        border-radius: 50%;
-        border: 7px solid #5e7ccc;
-        margin-right: 14px;
-    }
-
-    h2{
-        font-weight: 300;
-        //color: #fff;
-    }
-}
-
-.menu-items{
-    margin: 0px;
-
-    ion-item{
-        padding-left: 20px;
-        margin-bottom: 10px;
-        color: white;
-    }
-}*/
-
 *{
     font-family: 'MyriadProSemibold' !important;
 }   
@@ -80,6 +34,15 @@ ion-menu{
     --width: 16rem;
 }
 
+ion-menu {
+    &#menu-up{
+        display: block !important;
+        visibility: hidden;
+    }
+    &.show-menu {
+        visibility: visible !important;
+    }
+ }
 
 
 ion-item{
@@ -99,7 +62,7 @@ ion-item{
     background: #2153FF !important;
     display: flex;
     justify-content: center;
-    padding-top:110px;
+    padding-top:2rem;
     padding-bottom: 20px;
     border-bottom: 1px white solid!important;
     margin-left: 10px;
@@ -152,7 +115,7 @@ ion-list{
 
 
 .fullname{
-    padding: 20px 0px 0px 20px;
+    padding: 20px 0px 0px 10px;
     margin: 0px;
     text-align: left;
 }
