--- a/src/app/establecimiento/modal-mapa/modal-mapa.page.html
+++ b/src/app/establecimiento/modal-mapa/modal-mapa.page.html
@@ -4,7 +4,7 @@
   </ion-button>
 </ion-buttons>
 <ion-content class="padding">
-  <div #mapaUbicacion class="mapa">
+  <div id="mapaUbicacion" #mapaUbicacion class="mapa">
 
   </div>
 </ion-content>
