--- a/src/app/establecimiento/modal-mapa/modal-mapa.page.scss
+++ b/src/app/establecimiento/modal-mapa/modal-mapa.page.scss
@@ -6,3 +6,7 @@
 ion-buttons{
     justify-content: flex-end;
 }
+ion-app._gmaps_cdv_ .ion-page:not(._gmaps_cdv_),
+ion-app._gmaps_cdv_ ion-modal:not(._gmaps_cdv_) {
+    display: none;
+}
