--- a/src/app/inicio/inicio.page.scss
+++ b/src/app/inicio/inicio.page.scss
@@ -8,6 +8,16 @@ ion-header{
     font-family: 'MyriadProSemibold' !important;
 }
 
+.contenedor-publicidad{
+    width: 100%;
+    height: 5rem;
+}
+.contenedor-publicidad img{
+    width: 100%;
+    height: 100%;
+    object-fit: fill;
+}
+
 .titulo{
     font-family: var(--ion-font-family);
     font-weight: bold;
