actualizaciones para la apk
actualizacion solicitadas para configurar el apk correctamente

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,7 +32,7 @@
           <ion-item routerLink="/footer/sugerencia">Reclamos y Sugerencias</ion-item>
         </ion-menu-toggle>
         <ion-menu-toggle auto-hide="true">
-          <ion-item (click)=perfil()>Perfil</ion-item>
+          <ion-item routerLink="/footer/perfil">Perfil</ion-item>
         </ion-menu-toggle>
         <ion-menu-toggle auto-hide="true">
           <ion-item routerLink="/footer/politicas">Políticas de Privacidad</ion-item>
