--- a/src/app/auth/login/login/login.page.html
+++ b/src/app/auth/login/login/login.page.html
@@ -44,6 +44,8 @@
           <p class="sesion">Iniciar Sesión</p>
         </ion-button>
       </div>
+      <div class="espacio45">
+      </div>
     </form>
   </div>
 </ion-content>
