--- a/src/app/footer/footer.page.html
+++ b/src/app/footer/footer.page.html
@@ -19,7 +19,7 @@
       <div class = "valor"><span>{{number}}</span></div>
       <div class= "notifications"> <ion-img [src]="notificacion" ></ion-img></div> 
     </ion-tab-button>
-    <ion-tab-button class= "col_perfil" [class.active-item]="selectedPath.includes('perfil') " size=4 [tab]="tab">        
+    <ion-tab-button class= "col_perfil" [class.active-item]="selectedPath.includes('perfil') "  tab="perfil" size=4 >        
       <div class= "perfil"> 
         <ion-img [src]="usuario"></ion-img>
       </div>  
